Bug 879821 - NFC B2G IPC Implementation Using UnixSockets; r=qdot